--- a/src/index.css
+++ b/src/index.css
@@ -2,4 +2,19 @@ body {
   margin: 0;
   padding: 0;
   font-family: sans-serif;
+  position: auto;
+  padding: 10px;
+}
+
+body:after{
+  content : "";
+  display: block;
+  position: absolute;
+  top: 0;
+  left: 0;
+  background-image: url(../src/images/mtg-background.jpg); 
+  width: 100%;
+  height: 100%;
+  opacity : 0.15;
+  z-index: -1;
 }
