--- a/src/index.css
+++ b/src/index.css
@@ -2,7 +2,6 @@ body {
   margin: 0;
   padding: 0;
   font-family: sans-serif;
-  position: auto;
   padding: 10px;
 }
 
@@ -17,4 +16,5 @@ body:after{
   height: 100%;
   opacity : 0.15;
   z-index: -1;
+  background-size: contain;
 }
