add semantic inputs

--- a/src/App.css
+++ b/src/App.css
@@ -2,18 +2,19 @@
 
 .App {
   text-align: center;
-  font-family: 'MedievalSharp', cursive;
+  /* font-family: 'MedievalSharp', cursive; */
 }
 
 .App-logo {
-  animation: App-logo-spin infinite 12s linear;
+  animation: App-logo-spin infinite 10s linear;
   height: 80px;
 }
 
 .App-header {
   background-color: #222;
-  height: 150px;
-  padding: 22px 5px 0 5px;
+  height: 175px;
+  padding: 22px 5px 150px 5px;
+  margin: 5px;
   color: white;
 }
 
